# dev-configs

./: .p10k.zsh  .tmux.conf  .wezterm.lua  .zshrc  Makefile  README.md  snippets.md
.config/nvim/: dbt_lsp.md  init.lua  lazy-lock.json
.config/nvim/after/ftplugin/: gitcommit.lua
.config/nvim/after/syntax/: dbt.vim  sql.vim
.config/nvim/lua/sean/: lazy.lua  lsp.lua
.config/nvim/lua/sean/core/: keymaps.lua  options.lua
.config/nvim/lua/sean/plugins/: alpha.lua  arena.lua  auto-session.lua  autopairs.lua  barbecue.lua  black.lua  blink.lua  bufferline.lua  colorful-winsep.lua  colorscheme.lua  comment.lua  dbtpal.lua  git-signs.lua  harpoon.lua  highlight-colors.lua  icons.lua  indent-blankline.lua  init.lua  lualine.lua  markdown-preview.lua  mini.lua  neogit.lua  neotest.lua  noice.lua  nvim-cmp.lua  nvim-dap.lua  nvim-tree.lua  nvim-web-devicons.lua  oil.lua  peek.lua  python-import.lua  telescope.lua  treesitter.lua  venv-selector.lua  which-key.lua  windex.lua
.config/nvim/lua/sean/plugins/colorschemes/: neomodern.lua  tokyonight.lua
.config/nvim/lua/sean/plugins/git/: neogit.lua
.config/nvim/lua/sean/plugins/lsp/: lspconfig.lua  mason.lua
.config/nvim/lua/sean/plugins/python/: neogen.lua  neotest.lua  python-import.lua  venv-selector.lua
.config/nvim/python3_host/: pyproject.toml
.config/nvim/snippets/: dagster.json  dbt.json  package.json  test.sql
alacritty/: alacritty.toml
sketchybar/: sketchybarrc
sketchybar/plugins/: clock.sh
tmux_plugins/: tmux_popup.sh
tmux_plugins/tokyonight_theme/: themes.sh
(+7 files in other folders)
