[tool.poetry]
name = "nvim-python3-host"
version = "0.1.0"
description = ""
authors = ["Sean McFall <sean.l.mcfall@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.9"
pynvim = "^0.5.0"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
